--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <div class="row">
             <div class="col span_2_of_2">
                 <h4>Reservation</h4>
-                <h2>Book your table</h2>
+                <h3>Book your table</h3>
             </div>
         </div>
         <div class="row">
@@ -193,7 +193,7 @@
     </div>
 </section>
 <!--footer section-->
-<footer class="footer-section">
+<footer class="footer-section clear-fix">
     <div class="main-footer">
 
    
